# oats

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
oats/: __init__.py
oats/capabilities/: __init__.py  builtin.yaml
oats/cli/: __init__.py  main.py
oats/core/: __init__.py  executor.py  identity.py  llm.py  metrics.py  registry.py  synthesizer.py  types.py
oats/hitl/: __init__.py  gate.py
oats/mcp/: __init__.py  server.py
oats/platform/: __init__.py  integration.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_flow.py
tests/unit/: __init__.py  test_executor.py  test_hitl.py  test_registry.py  test_synthesizer.py
